--- a/demo/templates/edit_profile.html
+++ b/demo/templates/edit_profile.html
@@ -1,22 +1,28 @@
+{% include "nav.html" %}
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New User Form</title>
-    <link rel="stylesheet" href="{% static 'css/edit_profile.css' %}">
+    <link rel="stylesheet" href="{% static '/layout1.css' %}">
+    <link rel="stylesheet" href="{% static '/nav.css' %}">
+    <link rel="stylesheet" href="{% static '/edit_profile.css' %}">
+    <link rel="stylesheet" href="{% static '/nav.css' %}">
+    
+
+    
 </head>
 <body>
     <div class="container">
         <div class="module-container user-modules">
-            <h6 class="user">USER MODULES<span class="new">. new user</span></h6>
+            <h6 class="user">USER MODULES<span class="new">. update user</span></h6>
         </div>
 
         <div class="module-container new-user" style="height: 530px;">
-            <h3>New User</h3>
-            <p>Use the form below to create a new user profile</p>
+            <h3>Update User</h3>
+            <p>Use the form below to update user profile</p>
             <form id="newUserForm" method="post">
                 {% csrf_token %}
                 <div class="form-row">
