--- a/demo/static/profile.css
+++ b/demo/static/profile.css
@@ -165,7 +165,7 @@
         #password{
             padding-left: 10px;
         }
-        #confirm-password{
+        #confirm_password{
             padding-left: 10px;
         }
         .new{
