--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -54,6 +54,10 @@
                         <input type="password" id="password" name="password" placeholder="Password" autocomplete="off">
                         <span class="error" id="password-error">Password field is required</span>
                     </div>
+                    <div class="input-container">
+                        <input type="password" id="confirm_password" name="confirm_password" placeholder="confirm_password" autocomplete="off">
+                        <span class="error" id="confirm_password-error">Password does not match</span>
+                    </div>
                 </div>
                 <div class="btn-group">
                     <button type="button" class="cancel">Cancel</button>
