--- a/demo/templates/edit_profile.html
+++ b/demo/templates/edit_profile.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New User Form</title>
     <link rel="stylesheet" href="{% static '/layout1.css' %}">
-    <link rel="stylesheet" href="{% static '/nav.css' %}">
     <link rel="stylesheet" href="{% static '/edit_profile.css' %}">
     <link rel="stylesheet" href="{% static '/nav.css' %}">
     
@@ -50,7 +49,10 @@
                         <input type="password" id="password" name="password" placeholder="Password">
                         <span class="error" id="password-error">Password field is required</span>
                     </div>
-                    
+                    <div class="input-container">
+                        <input type="password" id="confirm_password" name="confirm_password" placeholder="confirm_password" autocomplete="off">
+                        <span class="error" id="confirm_password-error">Password does not match</span>
+                    </div>
                 </div>
                 <div class="btn-group">
                     <button type="button" class="cancel">Cancel</button>
