--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -94,7 +94,7 @@
               <div class="profile-dropdown">
                   <ul class="dropdown-menu">
                     <div class="user-info2" id="user-info2">
-                        <img src="../static/images/profile.jpg" alt="User Profile">
+                        <img class="user-info2" src="{% static '/images/profile.jpg' %}">
                         <span class="name2"> 
                             <span style="font-weight: bold; margin-bottom: 8px;">User Name</span><br>
                             <span style="font-weight: lighter;color: grey;" >Admin</span>
