--- a/demo/templates/Profile.html
+++ b/demo/templates/Profile.html
@@ -55,7 +55,7 @@
                         <span class="error" id="password-error">Password field is required</span>
                     </div>
                     <div class="input-container">
-                        <input type="password" id="confirm_password" name="confirm_password" placeholder="confirm_password" autocomplete="off">
+                        <input type="password" id="confirm_password" name="confirm_password" placeholder="confirm_password">
                         <span class="error" id="confirm_password-error">Password does not match</span>
                     </div>
                 </div>
