--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -21,7 +21,7 @@
 
 
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-user"></i> User</a>
+                    <a href="#" class="user1"><i class="fas fa-user one"></i> User</a>
                     <ul class="submenu">
                         <li class="user2"><a href="/Profile/" class="point"> New user</a></li>
                         <li class="user2"><a href="/manage_users/" class="point"> Manage user</a></li>
