--- a/demo/static/layout1.css
+++ b/demo/static/layout1.css
@@ -151,3 +151,53 @@ header .user-info img {
   margin-left: -94px !important;
   padding-left: 64px !important;
   }
+  .one{
+    margin-left: 3px;
+  }
+  .two{
+    margin-left: 3px;
+  }
+  .three{
+    margin-left: 3px;
+  }
+  .four{
+    margin-left: 3px;
+  }
+  .five{
+    margin-left: 3px;
+  }
+  .six{
+    margin-left: 3px;
+  }
+  .seven{
+    margin-left: 3px;
+ }
+  .eight{
+    margin-left: 3px;
+  }
+  
+  .logic{
+    margin-left: 7px;
+  }
+  .logic1{
+    margin-left: 7px;
+  }
+  .logic2{
+    margin-left: 12px;
+  }
+  .logic3{
+    margin-left: 15px;
+  }
+  .logic4{
+    margin-left: 7px;
+  }
+  .logic5{
+    margin-left: 7px;
+  }
+  .logic6{
+    margin-left: 15px;
+  }
+  .logic7{
+    margin-left: 7px;
+  }
+ 
