--- a/demo/templates/nav.html
+++ b/demo/templates/nav.html
@@ -21,14 +21,14 @@
 
 
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-user one"></i> User</a>
+                    <a href="#" class="user1"><i class="fas fa-user one"></i><span class="logic">User</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="/Profile/" class="point"> New user</a></li>
                         <li class="user2"><a href="/manage_users/" class="point"> Manage user</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-plane"></i> Flight</a>
+                    <a href="#" class="user1"><i class="fas fa-plane two" ></i><span class="logic1"> Flight</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="#" class="point"> New Flight</a></li>
                         <li class="user2"><a href="#" class="point"> Manage Flights</a></li>
@@ -36,41 +36,41 @@
                     
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-chair"></i> Seat</a>
+                    <a href="#" class="user1"><i class="fas fa-chair three"></i><span class="logic2">Seat</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="#" class="point"> New Seat</a></li>
                         <li class="user2"><a href="#" class="point"> Manage Seat</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-walking"></i> Traveller</a>
+                    <a href="#" class="user1"><i class="fas fa-walking four"></i><span class="logic3">Traveller</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="#" class="point"> New Travellers</a></li>
                         <li class="user2"><a href="#" class="point"> Manage Traveller</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-user-friends"></i> Passenger</a>
+                    <a href="#" class="user1"><i class="fas fa-user-friends five"></i><span class="logic4">Passenger</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="#" class="point">New Passenger</a></li>
                         <li class="user2"><a href="#" class="point">Manage Passenger</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-credit-card"></i> Payment</a>
+                    <a href="#" class="user1"><i class="fas fa-credit-card six"></i><span class="logic5">Payment</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="#" class="point"> Add Payment</a></li>
                         <li class="user2"><a href="#" class="point"> Manage Payment</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-file-alt"></i> Report</a>
+                    <a href="#" class="user1"><i class="fas fa-file-alt seven"></i><span class="logic6">Report</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="#" class="point">Manage Flights</a></li>
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="user1"><i class="fas fa-star"></i> Ratings</a>
+                    <a href="#" class="user1"><i class="fas fa-star eight"></i> <span class="logic7">Ratings</span></a>
                     <ul class="submenu">
                         <li class="user2"><a href="#" class="point"> View Ratings</a></li>
                     </ul>
