--- a/demo/templates/manage_users.html
+++ b/demo/templates/manage_users.html
@@ -14,7 +14,7 @@
     <div class="container1">
         <div class="module-container user-modules">
         
-            <h6 class="user">USER MODULES<span class="new">. new user</span></h6>
+            <h6 class="user">USER MODULES<span class="new">  . new user</span></h6>
         </div>
     </div>
 
@@ -38,7 +38,10 @@
         <table>
             <thead>
                 <tr>
-                    <th></th> 
+                    <th>
+                        <input type="checkbox" id="checkbox-header" name="checkbox-header">
+                        
+                      </th>
                     <th>Name</th>
                     <th>Email</th>
                     <th>Contact</th>
@@ -76,5 +79,4 @@
     </div>
 </div>
 </body>
-
 </html>
