--- a/demo/static/edit_profile.css
+++ b/demo/static/edit_profile.css
@@ -107,7 +107,7 @@ body {
         
         .board{
                 width: 208px !important;
-                margin-left: -20px;
+                margin-left: -27px !important;
                 transition: background-color 0.3s ease;
                 height: 17px !important;
         }
